# quaque

./: .gitignore  Cargo.toml
ctl/: Cargo.toml
ctl/src/: main.rs
daemon/: Cargo.toml
dl-spotify/: Cargo.toml
dl-spotify/src/: main.rs
ui/: Cargo.toml
ui/assets/: main.slint
