[package]
name = "quaque-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
ogg = { git = "https://github.com/RustAudio/ogg", features = ["async"]}
sdl2 = "0.35"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = { version = "0.3" }
